# llm_evaluation

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_live.py
app/: main.py
app/api/: endpoints.py
app/core/: __init__.py  config.py  prompts.py
app/models/: scorecard.py
app/services/: __init__.py  anonymizer.py  evaluator.py
app/templates/: index.html
tests/: test_anonymizer.py  test_api.py  test_config.py  test_scorecard.py  test_services.py
