[tool.poetry]
name = "llm-as-a-judge"
version = "0.1.0"
description = "Sistema LLM-as-a-Judge para avaliação de conversas de atendimento"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.28.0"
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
instructor = "^1.0.0"
groq = "^0.4.0"
presidio-analyzer = "^2.2.3"
presidio-anonymizer = "^2.2.3"
langsmith = "^0.1.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
